--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="66dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginBottom="20dp"
+        android:clickable="true"
+        android:contentDescription="@string/help_about_phone_number"
+        android:focusable="true"
+        android:onClick="goToHelp"
+        app:backgroundTint="@color/mint"
+        app:layout_constraintBottom_toTopOf="@+id/signIn"
+        app:layout_constraintStart_toEndOf="@+id/textEntry"
+        app:srcCompat="@android:drawable/ic_menu_help" />
+
+    <ImageView
+        android:id="@+id/icharmony_logo"
+        android:layout_width="266dp"
+        android:layout_height="213dp"
+        android:layout_marginTop="28dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:onClick="goToWeb"
+        app:layout_constraintBottom_toTopOf="@+id/uparrow"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo_trans" />
+
     <EditText
         android:id="@+id/textEntry"
         android:layout_width="wrap_content"
@@ -48,35 +79,20 @@
         app:layout_constraintTop_toBottomOf="@+id/textEntry" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/settingsButton"
         android:layout_width="66dp"
         android:layout_height="56dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
         android:clickable="true"
-        android:contentDescription="@string/help_about_phone_number"
+        android:contentDescription="@string/settings_desc"
         android:focusable="true"
-        android:onClick="goToHelp"
+        android:onClick="goToSettings"
         app:backgroundTint="@color/mint"
-        app:layout_constraintBottom_toTopOf="@+id/signIn"
-        app:layout_constraintStart_toEndOf="@+id/textEntry"
-        app:srcCompat="@android:drawable/ic_menu_help" />
-
-    <ImageView
-        android:id="@+id/icharmony_logo"
-        android:layout_width="266dp"
-        android:layout_height="213dp"
-        android:layout_marginTop="28dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:onClick="goToWeb"
-        app:layout_constraintBottom_toTopOf="@+id/uparrow"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo_trans" />
+        app:srcCompat="@android:drawable/ic_menu_preferences" />
 
     <ImageView
         android:id="@+id/uparrow"
