--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -42,6 +42,7 @@
         android:layout_marginTop="24dp"
         android:clickable="true"
         android:focusable="true"
+        android:onClick="goToProfile"
         android:text="@string/profile"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/theme" />
@@ -55,6 +56,7 @@
         android:layout_marginTop="24dp"
         android:clickable="true"
         android:focusable="true"
+        android:onClick="goToAnswers"
         android:text="@string/my_answers"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profile" />
